# quicklook

./: .gitignore  .prettierignore  .prettierrc.json  Cargo.toml  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  check-rust.yml  check-ts-type.yml
.tauri/: myapp.key  myapp.key.pub
crates/archive/: Cargo.toml  README.md
crates/archive/src/: error.rs  lib.rs
crates/archive/src/extractors/: mod.rs  sevenz.rs  tar.rs  zip.rs
crates/docs/: Cargo.toml
crates/docs/src/: lib.rs
public/: updater.json
src/: main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  settings.json
src-tauri/icons/: icon.icns
src-tauri/resources/: config.json
src-tauri/src/: bindings.rs  command.rs  helper.rs  lib.rs  preview.rs  tray.rs  updater.rs
src-tauri/src/helper/: archives.rs  audio.rs  config.rs  docs.rs  ffmp.rs  mod.rs  monitor.rs  selected_file.rs  win.rs
src-tauri/src/utils/: mod.rs  preview.rs
src/assets/: base.css  main.css  main.scss  var.css
src/components/: TheWelcome.vue  footer.vue  header.vue  layout-preview.vue  setting-item.vue
src/components/document/: excel.vue  sheet.vue
src/components/md-viewer/: index.vue
src/components/md-viewer/styles/: base.css  icons.css  vars.css
src/components/md-viewer/styles/components/: vp-doc.css
src/hooks/: theme.ts  use-window.ts
src/router/: index.ts
src/stores/: index.ts
src/utils/: const.ts  index.ts  markdown.ts  sentry.ts  theme.ts  typescript.ts
src/utils/markdown/: index.ts
src/utils/markdown/plugins/: container.ts  preWrapper.ts
src/views/: settings.vue  upgrade.vue
src/views/home/: font.vue  image.vue  index.vue  md.vue  not-support.vue  text.vue  video.vue
src/views/home/components/: footer.vue  header.vue
src/views/preview/: archive.vue  audio.vue  book.vue  code.vue  document.vue  font.vue  image.vue  index.vue  md.vue  not-support.vue  text.vue  video.vue
src/views/preview/components/: footer.vue  header.vue  preview-image.vue
vcpkg/: vcpkg.json
