[package]
name = "app"
version = "0.11.0"
description = "Windows 平台的文件预览工具"
authors = ["GuoJikun <guojikun486546@163.com>"]
license = ""
repository = "https://github.com/GuoJikun/quicklook.git"
homepage = "https://github.com/GuoJikun/quicklook"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# vcpkg = "0.2"
# bindgen = { version = "0.71.1", features = ["default"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["protocol-asset", "unstable", "tray-icon"] }
tauri-plugin-log = "2.5.0"
windows = { version = "0.61.0", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse"
] }
infer = { version = "0.16.0", features = ["std"] }
tauri-plugin-fs = "2.3.0"
tauri-plugin-dialog = "2.2.2"
urlencoding = "2.1.3"
tauri-plugin-shell = "2.2.2"
zip = { version = "2.2.1", features = [] }
chrono = { version = "0.4.38", features = ["serde"] }
calamine = "0.26.1"
csv = "1.3.1"
regex = "1.11.1"
# ffmpeg-next = { version = "7.1.0", features = ["default"] }
mp4 = "0.14.0"
tauri-plugin-store = "2"
# libarchive = "0.1.1"  # 这个库需要系统依赖，暂时注释掉
tar = "0.4.43"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
bzip2 = { version = "0.5.0", default-features = false }
xz2 = { version = "0.1.0", default-features = false }
sevenz-rust = "0.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.4.0"
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-updater = "2.8.1"
