[package]
name = "app"
version = "0.15.1"
description = "Windows 平台的文件预览工具"
authors = ["GuoJikun <guojikun486546@163.com>"]
license = ""
repository = "https://github.com/GuoJikun/quicklook.git"
homepage = "https://github.com/GuoJikun/quicklook"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = [
    "protocol-asset",
    "unstable",
    "tray-icon",
] }
windows = { version = "0.61.0", features = [
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_System_SystemServices",
    "Win32_System_Variant",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
] }
# tauri 相关
tauri-plugin-opener = "2.5.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-dialog = "2.3.3"
urlencoding = "2.1.3"
tauri-plugin-shell = "2.3.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-log = "2.6.0"
lofty = "0.22.2"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.0"
tauri-plugin-single-instance = "2.3.3"
tauri-plugin-updater = "2.9.0"

chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.11.1"
# Archive handling library
quicklook-archive = { path = "../crates/archive" }
# Document processing library
quicklook-docs = { path = "../crates/docs" }
psd = "0.3.5"
image = { version = "0.25.6", features = ["png", "webp"] }
