[package]
name = "quicklook-docs"
version = "0.1.0"
description = "Document processing library for QuickLook"
authors = ["GuoJikun <guojikun486546@163.com>"]
license = ""
repository = "https://github.com/GuoJikun/quicklook.git"
homepage = "https://github.com/GuoJikun/quicklook"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "quicklook_docs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
calamine = "0.26.1"
csv = "1.3.1"
log = "0.4"

[features]
default = ["excel", "csv", "docx"]
excel = []
csv = []
docx = []